--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,7 @@ footer { font-style: italic;
   Take advantage of the power of Web 2.0!</p>
   </main>
 <footer><hr>
-Copyright © 2014 Your Name Here
+Copyright © 2020 Dakota Warner
 </footer>
 
 </body></html>
