--- a/Index3.html
+++ b/Index3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<head>
+<html lang="en"><head>
 <title>Lighthouse Bistro</title>
 <meta charset="utf-8">
 <style>
@@ -40,3 +40,22 @@ h1 {
 }
 </style>
 </head>
+<body>
+<div id="container">
+<header>
+<h1>Lighthouse Bistro</h1>
+</header>
+<nav><a href="index.html">Home</a> &nbsp;<a href="menu.html">Menu</a> &nbsp;<a href="directions.html">Directions</a> &nbsp;<a href="contact.html">Contact</a></nav>
+<main>
+<h2>Locally Roasted Free-Trade Coffee</h2>
+<p>Indulge in the aroma of freshly ground roast coffee. Specialty drinks are available hot or cold.</p>
+<h2>Specialty Pastries</h2>
+<p>Enjoy a selection of our fresh-baked, organic pastries, including fresh-fruit muffins, scones, croissants, and cinammon rolls.</p>
+<h2>Lunchtime is Anytime</h2>
+<p>Savor delicious wraps and sandwiches on hearty, whole-grain breads with locally-grown salad, fruit, and vegetables. </p>
+</main>
+<footer>Copyright © 2014 Yves Joseph</footer>
+</div>
+
+
+</body></html>
