--- a/Index2.html
+++ b/Index2.html
@@ -3,23 +3,27 @@
 <title>Tropical Island</title>
 <meta charset="utf-8">
 <style>
+figure { 
+  width: 640px;
+  border: 1px solid #000000;
+  padding: 5px; 
+  }
 
-#figure { width: 640px;
-          border: 1px solid #000000;
-          padding: 5px;
-          text-align: center;
-          font-family: Papyrus, fantasy; }
-          
+figcaption { 
+  text-align: center;
+font-family: Papyrus, fantasy; 
+}
 </style>
 </head>
 <body>
-<div id="figure">
 
-<img src="/Trillium/mycaption/images/myisland.jpg" alt="Tropical Island" height="480" width="640">
+<figure>
+  <img src="/Trillium/mycaption2/images/myisland.jpg" width="640" height="480" alt="Tropical Island">
+  <figcaption>
+    Tropical Island Getaway
+  </figcaption>
+</figure>
 
-
-<p>Tropical Island Getaway</p>
-</div>
 
 
 </body></html>
