--- a/Index2.html
+++ b/Index2.html
@@ -18,7 +18,7 @@ font-family: Papyrus, fantasy;
 <body>
 
 <figure>
-  <img src="/Trillium/mycaption2/images/myisland.jpg" width="640" height="480" alt="Tropical Island">
+  <img src="myisland.jpg" width="640" height="480" alt="Tropical Island">
   <figcaption>
     Tropical Island Getaway
   </figcaption>
